# hm1002-ipc-out

./: Makefile  readme.txt
ai_manage_subsystem/: CMakeLists.txt
ai_manage_subsystem/include/: ai_manage_app.h  ai_manage_module.h  ai_manage_remote_event_server.h  ai_object_detection.h  ai_packet_detection.h  ai_rapid_detection.h  event_mange_remote_event.h  video_manage_channel.h  video_manage_channel_session.h  video_source_input_server.h
ai_manage_subsystem/src/: ai_manage_app.cpp  ai_manage_module.cpp  ai_manage_remote_event_server.cpp  ai_object_detection.cpp  ai_packet_detection.cpp  ai_rapid_detection.cpp  event_mange_remote_event.cpp  main.cpp  video_manage_channel.cpp  video_manage_channel_session.cpp  video_source_input_server.cpp
audio_manage_subsystem/: CMakeLists.txt
audio_manage_subsystem/include/: audio_codec_entity.h  audio_manage_app.h  audio_manage_channel.h  audio_manage_channel_session.h  audio_manage_module.h  audio_manage_remote_event_server.h  audio_source_input_server.h
audio_manage_subsystem/src/: audio_codec_entity.cpp  audio_manage_app.cpp  audio_manage_channel.cpp  audio_manage_channel_session.cpp  audio_manage_module.cpp  audio_manage_remote_event_server.cpp  audio_source_input_server.cpp  main.cpp
center_manage_subsystem/: CMakeLists.txt
center_manage_subsystem/include/: center_manage_app.h  center_manage_module.h  center_manage_remote_event_server.h  low_power_inform_flow.h  low_power_module.h  low_power_remote_event_server.h
center_manage_subsystem/src/: center_manage_app.cpp  center_manage_module.cpp  center_manage_remote_event_server.cpp  low_power_inform_flow.cpp  low_power_module.cpp  low_power_remote_event_server.cpp  main.cpp
cli_agent_client/: CMakeLists.txt
cli_agent_client/include/: cli_agent_api.hpp  cli_agent_args.hpp  cli_agent_common.hpp  cli_agent_host.hpp  cli_agent_host_mt7628.hpp  cli_agent_host_t41.hpp  cli_agent_mcu.hpp  cli_agent_mcu_atbm6441.hpp  cli_agent_mcu_mt7628.hpp
cli_agent_client/res/: clean_outlog.py  cli.rng  cli.xsd  cli2cpp.py  cli2cpp.xsl  cli2help.py  cli2help.xsl  cli_agent_client_config.xml  clicommon.py  modlog.py  pylint.conf  xmldoc.py
cli_agent_client/src/: cli_agent_api.cpp  cli_agent_burn_in.cpp  cli_agent_common.cpp  cli_agent_host.cpp  cli_agent_host_mt7628.cpp  cli_agent_host_t41.cpp  cli_agent_mcu.cpp  cli_agent_mcu_atbm6441.cpp  cli_agent_mcu_io_uart.cpp  cli_agent_mcu_mt7628.cpp  main.cpp
configs/: audio_resource.txt  version
configs/ai_manage_subsystem/: ai_manage_app.ini  ai_manage_module.ini
configs/audio_manage_subsystem/: audio_manage_app.ini  audio_manage_module.ini
configs/center_manage_subsystem/: center_manage_app.ini  center_manage_module.ini  low_power_module.ini
configs/dev_manage_subsystem/: dev_manage_app.ini  dev_manage_module.ini
configs/event_manage_subsystem/: event_manage_app.ini  event_manage_module.ini
configs/ipc_manage_subsystem/: ipc_manage_app.ini  ipc_manage_module.ini
configs/local_storage_subsystem/: local_storage_app.ini  local_storage_module.ini
configs/log_manage_subsystem/: log_manage_app.ini  log_manage_module.ini
configs/media_interface/: CLoadZeratulAudioInterface.ini  CLoadZeratulSpeakerInterface.ini  CLoadZeratulVideoInterface.ini
configs/media_source_subsystem/: audio_source_module.ini  mcu_serial_port_module.ini  media_source_app.ini  speaker_source_module.ini  video_source_module.ini
configs/model/: detectorA.json  detectorB.json
configs/ota_manage_subsystem/: ota_manage_app.ini  ota_manage_module.ini
configs/script/: S10ipc_manage_subsystem.sh  S10ota_manage_subsystem.sh  S20audio_manage_subsystem.sh  S30video_manage_subsystem.sh  S40ai_manage_subsystem.sh  S50speaker_manage_subsystem.sh  S60event_manage_subsystem.sh  S80dev_manage_subsystem.sh  S90center_manage_subsystem.sh  S99daemon  S99log_manage_subsystem.sh  after_insmod_sfc.sh  delay_start.sh  fast_start.sh  setup.sh
dev_manage_subsystem/: CMakeLists.txt
env_config/: factory.txt  factory_cn.txt  fw_genenv  point.txt  user.txt  user_cn.txt
event_manage_subsystem/: CMakeLists.txt
ipc_manage_subsystem/: CMakeLists.txt
libcomproxy/: CMakeLists.txt
libcomproxy/include/: com_proxy_base.h  com_proxy_client_end_point.h  com_proxy_multi_end_point.h  com_proxy_publisher.h  com_proxy_server_end_point.h  com_proxy_subscriber.h  com_proxy_udp_client.h  com_proxy_udp_server.h  com_rpc_client_end_point.h  com_rpc_server_end_point.h  com_rtp_client_end_point.h  com_rtp_server_end_point.h  com_shm_client_end_point.h  com_shm_server_end_point.h
libcomproxy/src/: com_proxy_base.cpp  com_proxy_client_end_point.cpp  com_proxy_multi_end_point.cpp  com_proxy_publisher.cpp  com_proxy_server_end_point.cpp  com_proxy_subscriber.cpp  com_proxy_udp_client.cpp  com_proxy_udp_server.cpp  com_rpc_client_end_point.cpp  com_rpc_server_end_point.cpp  com_rtp_client_end_point.cpp  com_rtp_server_end_point.cpp  com_shm_client_end_point.cpp  com_shm_server_end_point.cpp
libcore/: CMakeLists.txt
libcrypt/: CMakeLists.txt
libcrypt/include/: crypt_api_mx.h
libcrypt/include/jz_decrypt/: bignum.h  common.h  cpm.h  hash.h  irom.h  pss.h  rsa.h  scb_verify.h
libcrypt/src/: crypt_api_mx.cpp
libcrypt/src/jz_decrypt/: bignum.c  hash.c  irom.c  pss.c  rsa.c  scb_verify.c
lkm/: Makefile
local_storage_subsystem/: CMakeLists.txt
log_manage_subsystem/: CMakeLists.txt
media_source_subsystem/: CMakeLists.txt
ota_manage_subsystem/: CMakeLists.txt
ota_manage_subsystem/include/: ota_manage_app.h  ota_manage_fw_crc.h  ota_manage_fw_unpack.h  ota_manage_module.h  ota_manage_progress_report.h  ota_manage_remote_event_server.h  ota_manage_upgrade_process.h
ota_manage_subsystem/src/: main.cpp  ota_manage_app.cpp  ota_manage_fw_crc.cpp  ota_manage_fw_unpack.cpp  ota_manage_module.cpp  ota_manage_progress_report.cpp  ota_manage_remote_event_server.cpp  ota_manage_upgrade_process.cpp
speaker_manage_subsystem/: CMakeLists.txt
tools/: Makefile  atbm_iot_cli_status  atbm_iot_cli_status.c  ethtool  flash_od_model  flash_od_model.c
video_manage_subsystem/: CMakeLists.txt
(+485 files in other folders)
